# dockernativemanager

./: eslint.config.js  package.json  pnpm-lock.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src/components/layout/: Sidebar.tsx
src/components/ui/: resizable.tsx
